--- a/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -10,16 +10,19 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="./../../../resources/css/default.css" rel="stylesheet" type="text/css" />
-        <link href="./../../../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
+        <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['js:relojdhtml.js']}" type="text/javascript" />
+        <link href="#{resource['images:favicon.ico']}" rel="icon" />
         <title><ui:insert name="title"/></title>
     </h:head>
 
-    <h:body>
+    <h:body onload="mueveReloj()">
 
         <div id="top">
-            <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="/web/resources/images/logo.png"></ice:graphicImage></div>
+            <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['images:logo.png']}"></ice:graphicImage></div>
             <div><ui:insert name="logoempresa"></ui:insert></div>
+            <div><ice:outputText id="capareloj"></ice:outputText></div>
         </div>
         <div>
             <div id="left">
@@ -35,7 +38,7 @@
             </div>
         </div>
         <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
+            <ice:outputText id="copyright">&copy;Carlos Barrero V&aacute;zquez y Antonio Camacho Zapata - Sevilla, 2011</ice:outputText>
         </div>
 
     </h:body>
