--- a/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -38,6 +38,7 @@
             </div>
         </div>
         <div id="bottom">
+            <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['images:banner-logos.gif']}"></ice:graphicImage>
             <ice:outputText id="copyright">&copy;Carlos Barrero V&aacute;zquez y Antonio Camacho Zapata - Sevilla, 2011</ice:outputText>
         </div>
 
