--- a/trunk/web/resources/css/cssLayout.css
+++ b/trunk/web/resources/css/cssLayout.css
@@ -1,4 +1,3 @@
-
 #top {
     position: relative;
     color: white;
@@ -10,13 +9,14 @@
     height: 26px;
     bottom:0px;
     text-align:right;
+    display: none;
 }
 
 .wrapper {
     min-height: 100%;
     height: auto;
     height: 100%;
-    margin: 0 auto -29px;
+    margin: 0 auto -26px;
 }
 
 #left {
