--- a/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -12,8 +12,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
-        <link href="#{resource['js:relojdhtml.js']}" type="text/javascript" />
         <link href="#{resource['images:favicon.ico']}" rel="icon" />
+        <link href="#{resource['css:./xmlhttp/css/rime/rime.css']}" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
         <title><ui:insert name="title"/></title>
     </h:head>
 
