--- a/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -13,7 +13,7 @@
         <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['images:favicon.ico']}" rel="icon" />
-        <link href="#{resource['css:./xmlhttp/css/rime/rime.css']}" rel="stylesheet" type="text/css"/>
+        <!--<link href="#{resource['css:./xmlhttp/css/rime/rime.css']}" rel="stylesheet" type="text/css"/>-->
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
         <title><ui:insert name="title"/></title>
     </h:head>
