--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -25,52 +25,66 @@
                 <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['images:logo.png']}"></ice:graphicImage></div>
                 <div><ui:insert name="logoempresa"></ui:insert></div>
             </div>
-            <c:if test="${privilegiosBean==null}">
-                <h1>Fucniona!!</h1>
+            <c:if test="${privilegiosBean.compruebaPrivilegiosSesion()==1}">
+                <ice:outputText value="#{usuario.nombre}"/>
             </c:if>
-
             <div>
                 <div id="left">
-                    <ui:insert name="left">
+                    <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==0||privilegiosBean.compruebaPrivilegiosSesion()==1||privilegiosBean.compruebaPrivilegiosSesion()==2}">
                         <ice:outputLink value="home.xhtml">Inicio</ice:outputLink>
-                        <c:if test="${usuario.privilegios==0}">
-                            <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink>
-                            <ice:commandLink action="#" value="Administrar empresas"></ice:commandLink>
-                            <ice:commandLink action="#" value="Administrar usuarios"></ice:commandLink>
-                        </c:if>
+                        <ice:form>
+                            <c:choose >
+                                <c:when test="#{privilegiosBean.compruebaPrivilegiosSesion()==1}">
+                                    <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Ver calendario"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Administrar reuniones"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Administrar empleados"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Administrar salas de reunión"></ice:commandLink><br/>
+                                </c:when>
+                                <c:when test="#{privilegiosBean.compruebaPrivilegiosSesion()==0}">
+                                    <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Administrar empresas"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Administrar usuarios"></ice:commandLink><br/>
+                                </c:when>
 
-                        <c:if test="${usuario.privilegios==1}">
-                            <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink>
-                            <ice:commandLink action="#" value="Ver calendario"></ice:commandLink>
-                            <ice:commandLink action="#" value="Administrar reuniones"></ice:commandLink>
-                            <ice:commandLink action="#" value="Administrar empleados"></ice:commandLink>
-                            <ice:commandLink action="#" value="Administrar salas de reunión"></ice:commandLink>
-                        </c:if>
-                        <c:if test="${usuario.privilegios==2}">
-                            <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink>
-                            <ice:commandLink action="#" value="Ver calendario"></ice:commandLink>
-                            <ice:commandLink action="#" value="Crear reuni&oacute;n"></ice:commandLink>                                                                                            
-                        </c:if>
-                        <ice:commandLink action="#" value="Ayuda"></ice:commandLink>                                                       
-                        <ice:commandLink action="#" value="Modificar mis datos"></ice:commandLink>
-                        <ice:commandLink action="#" value="Cerrar sesi&oacute;n"></ice:commandLink>
+                                <c:when test="#{privilegiosBean.compruebaPrivilegiosSesion()==2}">
+                                    <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Ver calendario"></ice:commandLink><br/>
+                                    <ice:commandLink action="#" value="Crear reuni&oacute;n"></ice:commandLink><br/>                                                                                            
+                                </c:when>
+
+
+
+                            </c:choose>
+                            <ice:commandLink action="#" value="Ayuda"></ice:commandLink><br/>                                                       
+                            <ice:commandLink action="#" value="Modificar mis datos"></ice:commandLink><br/>
+                            <ice:commandLink action="#" value="Cerrar sesi&oacute;n"></ice:commandLink><br/>
+                        </ice:form>
+
+                    </c:if>
+                    <!-- -->
+                    <ui:insert name="left">
+
+                        <!---->
 
 
                     </ui:insert>
                 </div>
-                <div>
-                    <div id="right">
-                        <ui:insert name="right">Right</ui:insert>
-                    </div>
-                    <div id="content" class="right_content">
-                        <ui:insert name="content">Content</ui:insert>
-                    </div>
+                <div id="right">
+                    <ui:insert name="right">Right</ui:insert>
                 </div>
+                <div id="content" class="right_content">
+                    <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==3}">
+                        <h1 style="color: red;">ERROR, NO TIENE PERMISO PARA ENTRAR AQU&Iacute;</h1>
+                    </c:if>
+                    <ui:insert name="content">
+
+                    </ui:insert>
+                </div>
+
                 <div class="push"></div> 
             </div>
-            <c:if test="${privilegiosBean.compruebaPrivilegiosSesion()==3}">
-                <h1 style="color: red;">ERROR, NO TIENE PERMISO PARA ENTRAR AQU&Iacute;</h1>
-            </c:if>
+
         </div>
         <div class="footer" id="bottom">
             <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['images:banner-logos.gif']}"></ice:graphicImage>
