--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -57,7 +57,7 @@
                                     <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink><br/>
                                     <!--<ice:commandLink action="#{usuario.insertarCalendarioSesion}" value="Ver calendario" partialSubmit="true"></ice:commandLink><br/>-->
                                     <ice:outputLink value="viewcalendar.xhtml">Ver calendario</ice:outputLink><br/>
-                                    <ice:commandLink action="#" value="Crear reuni&oacute;n"></ice:commandLink><br/>                                                                                            
+                                    <ice:outputLink value="creareunion.xhtml">Crear reunión</ice:outputLink><br/>                                                                                         
                                 </c:when>
                                 
 
