--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -47,6 +47,7 @@
                                     <ice:commandLink action="#" value="Administrar reuniones"></ice:commandLink><br/>
                                     <ice:commandLink action="#" value="Administrar empleados"></ice:commandLink><br/>
                                     <ice:commandLink action="#" value="Administrar salas de reunión"></ice:commandLink><br/>
+                                    <ice:outputLink value="relaciones-empresariales.xhtml">Relaciones empresariales</ice:outputLink><br/>
                                 </c:when>
                                 <c:when test="#{privilegiosBean.compruebaPrivilegiosSesion()==2}">
                                     <ice:commandLink action="#" value="Ver notificaciones"></ice:commandLink><br/>
