--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -27,7 +27,7 @@
 
             </div>
             <c:if test="${privilegiosBean.compruebaPrivilegiosSesion()==1}">
-                <ice:outputText value="#{usuario.nombre}"/>
+                <ice:outputText value="Hola #{usuario.nombre}"/>
             </c:if>
             <div>
                 <div id="left">
