--- a/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -10,8 +10,11 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel='stylesheet' type='text/css' href='./xmlhttp/css/xp/xp.css'/>
         <link href="#{resource['css:default.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['css:cssLayout.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['css:bootstrap.css']}" rel="stylesheet" type="text/css" />
+        <link href="#{resource['css:bootstrap-responsive.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['images:favicon.ico']}" rel="icon" />
         <!--<link href="#{resource['css:./xmlhttp/css/rime/rime.css']}" rel="stylesheet" type="text/css"/>-->
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
@@ -22,7 +25,7 @@
         <div class="wrapper">
             <div id="top">
 
-                <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['images:logo.png']}"></ice:graphicImage></div>
+                <div id="logocm"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['img:logo-creativemeeting.png']}"/></div>
                 <div><ui:insert name="logoempresa"></ui:insert></div>
             </div>
             <div>
