--- a/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="footer" id="bottom">
-            <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['images:banner-logos.gif']}"></ice:graphicImage>
+            <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['img:banner-logos.gif']}"></ice:graphicImage>
             <ice:outputText id="copyright">&copy;Carlos Barrero V&aacute;zquez y Antonio Camacho Zapata - Sevilla, 2012</ice:outputText>
         </div>
 
