--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -78,7 +78,7 @@
 
         </div>
         <div class="footer" id="bottom">
-            <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['images:banner-logos.gif']}"></ice:graphicImage>
+            <ice:graphicImage alt="Tecnologias utilizadas" url="#{resource['img:banner-logos.gif']}"></ice:graphicImage>
             <ice:outputText id="copyright">&copy;Carlos Barrero V&aacute;zquez y Antonio Camacho Zapata - Sevilla, <ice:outputText>#{Calendar.getInstance().get(Calendar.YEAR)}</ice:outputText></ice:outputText>
         </div>
 
