--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -17,6 +17,7 @@
         <link href="#{resource['css:bootstrap-responsive.css']}" rel="stylesheet" type="text/css" />
         <link href="#{resource['img:favicon.ico']}" rel="icon" />
         <link rel="stylesheet" type="text/css" href="./xmlhttp/css/rime/rime.css"/>
+        <!--[if gte IE 9]><style type="text/css">.gradient {filter: none;}</style><![endif]-->
         <title><ui:insert name="title"/></title>
     </h:head>
     <h:body>
