--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -64,7 +64,7 @@
                 <div id="right">
                     <ui:insert name="right">Right</ui:insert>
                 </div>
-                <div id="content" class="right_content">
+                <div id="content" style="margin: 0pt 155px; width: auto;">
 
                     <ice:panelGroup rendered="#{privilegiosBean.compruebaPrivilegiosSesion()==3}">
                         <h1 style="color: red;">ERROR, NO TIENE PERMISO PARA ENTRAR AQU&Iacute;</h1>
